feat: rename visual-build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ctx-render",
-  "version": "1.0.0",
+  "name": "visual-build",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "devDependencies": {
