--- a/packages/editer/package.json
+++ b/packages/editer/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "editor",
+  "name": "@visual-build/editor",
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
@@ -21,7 +21,9 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
+    "classnames": "^2.3.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.20"
