--- a/packages/editer/package.json
+++ b/packages/editer/package.json
@@ -25,6 +25,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "classnames": "^2.3.1",
     "react": "17.x",
+    "react-dnd": "^14.0.4",
     "react-dom": "17.x",
     "umi": "^3.5.20"
   },
