--- a/packages/editer/package.json
+++ b/packages/editer/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.3.1",
     "react": "17.x",
     "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "17.x",
     "umi": "^3.5.20"
   },
