--- a/packages/editer/package.json
+++ b/packages/editer/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
+    "ahooks": "^2.10.12",
     "classnames": "^2.3.1",
     "react": "17.x",
     "react-dnd": "^14.0.4",
